Add tool location badges for improved clarity on processing location

--- a/public/index.html
+++ b/public/index.html
@@ -70,115 +70,115 @@
             <nav class="sidebar-nav" id="sidebarNav">
                 <div class="nav-category">
                     <div class="nav-category-title">DOWNLOAD</div>
-                    <a class="nav-item" data-tool="downloader" onclick="switchTool('downloader')">
+                    <a class="nav-item" data-tool="downloader" data-location="server" onclick="switchTool('downloader')">
                         <i class="fas fa-download"></i><span>Media Downloader</span>
                     </a>
                 </div>
                 <div class="nav-category">
                     <div class="nav-category-title">IMAGE</div>
-                    <a class="nav-item" data-tool="image-compress" onclick="switchTool('image-compress')">
+                    <a class="nav-item" data-tool="image-compress" data-location="browser" onclick="switchTool('image-compress')">
                         <i class="fas fa-compress-alt"></i><span>Compress</span>
                     </a>
-                    <a class="nav-item" data-tool="image-resize" onclick="switchTool('image-resize')">
+                    <a class="nav-item" data-tool="image-resize" data-location="browser" onclick="switchTool('image-resize')">
                         <i class="fas fa-expand-arrows-alt"></i><span>Resize</span>
                     </a>
-                    <a class="nav-item" data-tool="image-convert" onclick="switchTool('image-convert')">
+                    <a class="nav-item" data-tool="image-convert" data-location="browser" onclick="switchTool('image-convert')">
                         <i class="fas fa-exchange-alt"></i><span>Convert</span>
                     </a>
-                    <a class="nav-item" data-tool="metadata-strip" onclick="switchTool('metadata-strip')">
+                    <a class="nav-item" data-tool="metadata-strip" data-location="server" onclick="switchTool('metadata-strip')">
                         <i class="fas fa-eraser"></i><span>Metadata Strip</span>
                     </a>
-                    <a class="nav-item" data-tool="favicon-generate" onclick="switchTool('favicon-generate')">
+                    <a class="nav-item" data-tool="favicon-generate" data-location="browser" onclick="switchTool('favicon-generate')">
                         <i class="fas fa-star"></i><span>Favicon Generator</span>
                     </a>
-                    <a class="nav-item" data-tool="image-crop" onclick="switchTool('image-crop')">
+                    <a class="nav-item" data-tool="image-crop" data-location="browser" onclick="switchTool('image-crop')">
                         <i class="fas fa-crop-alt"></i><span>Crop</span>
                     </a>
-                    <a class="nav-item" data-tool="image-bg-remove" onclick="switchTool('image-bg-remove')">
+                    <a class="nav-item" data-tool="image-bg-remove" data-location="server" onclick="switchTool('image-bg-remove')">
                         <i class="fas fa-user-alt"></i><span>Background Remover</span>
                     </a>
-                    <a class="nav-item" data-tool="redact" onclick="switchTool('redact')">
+                    <a class="nav-item" data-tool="redact" data-location="browser" onclick="switchTool('redact')">
                         <i class="fas fa-user-secret"></i><span>Privacy Redaction</span>
                     </a>
                 </div>
                 <div class="nav-category">
                     <div class="nav-category-title">VIDEO</div>
-                    <a class="nav-item" data-tool="video-compress" onclick="switchTool('video-compress')">
+                    <a class="nav-item" data-tool="video-compress" data-location="server" onclick="switchTool('video-compress')">
                         <i class="fas fa-file-video"></i><span>Compress</span>
                     </a>
-                    <a class="nav-item" data-tool="video-trim" onclick="switchTool('video-trim')">
+                    <a class="nav-item" data-tool="video-trim" data-location="server" onclick="switchTool('video-trim')">
                         <i class="fas fa-cut"></i><span>Trim / Cut</span>
                     </a>
-                    <a class="nav-item" data-tool="video-convert" onclick="switchTool('video-convert')">
+                    <a class="nav-item" data-tool="video-convert" data-location="server" onclick="switchTool('video-convert')">
                         <i class="fas fa-film"></i><span>Convert</span>
                     </a>
-                    <a class="nav-item" data-tool="video-extract-audio" onclick="switchTool('video-extract-audio')">
+                    <a class="nav-item" data-tool="video-extract-audio" data-location="server" onclick="switchTool('video-extract-audio')">
                         <i class="fas fa-volume-up"></i><span>Extract Audio</span>
                     </a>
-                    <a class="nav-item" data-tool="video-to-gif" onclick="switchTool('video-to-gif')">
+                    <a class="nav-item" data-tool="video-to-gif" data-location="server" onclick="switchTool('video-to-gif')">
                         <i class="fas fa-magic"></i><span>To GIF</span>
                     </a>
-                    <a class="nav-item" data-tool="gif-to-video" onclick="switchTool('gif-to-video')">
+                    <a class="nav-item" data-tool="gif-to-video" data-location="server" onclick="switchTool('gif-to-video')">
                         <i class="fas fa-photo-video"></i><span>GIF to Video</span>
                     </a>
-                    <a class="nav-item" data-tool="video-remove-audio" onclick="switchTool('video-remove-audio')">
+                    <a class="nav-item" data-tool="video-remove-audio" data-location="server" onclick="switchTool('video-remove-audio')">
                         <i class="fas fa-volume-mute"></i><span>Remove Audio</span>
                     </a>
-                    <a class="nav-item" data-tool="video-speed" onclick="switchTool('video-speed')">
+                    <a class="nav-item" data-tool="video-speed" data-location="server" onclick="switchTool('video-speed')">
                         <i class="fas fa-tachometer-alt"></i><span>Speed Change</span>
                     </a>
-                    <a class="nav-item" data-tool="video-frame" onclick="switchTool('video-frame')">
+                    <a class="nav-item" data-tool="video-frame" data-location="server" onclick="switchTool('video-frame')">
                         <i class="fas fa-camera"></i><span>Frame Extract</span>
                     </a>
-                    <a class="nav-item" data-tool="video-stabilize" onclick="switchTool('video-stabilize')">
+                    <a class="nav-item" data-tool="video-stabilize" data-location="server" onclick="switchTool('video-stabilize')">
                         <i class="fas fa-hand-paper"></i><span>Stabilize</span>
                     </a>
-                    <a class="nav-item" data-tool="subtitle-extract" onclick="switchTool('subtitle-extract')">
+                    <a class="nav-item" data-tool="subtitle-extract" data-location="server" onclick="switchTool('subtitle-extract')">
                         <i class="fas fa-closed-captioning"></i><span>Subtitles</span>
                     </a>
                 </div>
                 <div class="nav-category">
                     <div class="nav-category-title">AUDIO</div>
-                    <a class="nav-item" data-tool="audio-convert" onclick="switchTool('audio-convert')">
+                    <a class="nav-item" data-tool="audio-convert" data-location="browser" onclick="switchTool('audio-convert')">
                         <i class="fas fa-headphones"></i><span>Convert</span>
                     </a>
-                    <a class="nav-item" data-tool="audio-normalize" onclick="switchTool('audio-normalize')">
+                    <a class="nav-item" data-tool="audio-normalize" data-location="server" onclick="switchTool('audio-normalize')">
                         <i class="fas fa-balance-scale-right"></i><span>Normalize</span>
                     </a>
                 </div>
                 <div class="nav-category">
                     <div class="nav-category-title">DOCUMENT</div>
-                    <a class="nav-item" data-tool="pdf-compress" onclick="switchTool('pdf-compress')">
+                    <a class="nav-item" data-tool="pdf-compress" data-location="server" onclick="switchTool('pdf-compress')">
                         <i class="fas fa-file-pdf"></i><span>PDF Compress</span>
                     </a>
-                    <a class="nav-item" data-tool="pdf-merge" onclick="switchTool('pdf-merge')">
+                    <a class="nav-item" data-tool="pdf-merge" data-location="server" onclick="switchTool('pdf-merge')">
                         <i class="fas fa-object-group"></i><span>PDF Merge</span>
                     </a>
-                    <a class="nav-item" data-tool="pdf-to-images" onclick="switchTool('pdf-to-images')">
+                    <a class="nav-item" data-tool="pdf-to-images" data-location="server" onclick="switchTool('pdf-to-images')">
                         <i class="fas fa-images"></i><span>PDF to Images</span>
                     </a>
-                    <a class="nav-item" data-tool="images-to-pdf" onclick="switchTool('images-to-pdf')">
+                    <a class="nav-item" data-tool="images-to-pdf" data-location="server" onclick="switchTool('images-to-pdf')">
                         <i class="fas fa-file-image"></i><span>Images to PDF</span>
                     </a>
                 </div>
                 <div class="nav-category">
                     <div class="nav-category-title">UTILITY</div>
-                    <a class="nav-item" data-tool="qr-generate" onclick="switchTool('qr-generate')">
+                    <a class="nav-item" data-tool="qr-generate" data-location="browser" onclick="switchTool('qr-generate')">
                         <i class="fas fa-qrcode"></i><span>QR Code</span>
                     </a>
-                    <a class="nav-item" data-tool="hash-generate" onclick="switchTool('hash-generate')">
+                    <a class="nav-item" data-tool="hash-generate" data-location="server" onclick="switchTool('hash-generate')">
                         <i class="fas fa-fingerprint"></i><span>Hash Generator</span>
                     </a>
-                    <a class="nav-item" data-tool="base64" onclick="switchTool('base64')">
+                    <a class="nav-item" data-tool="base64" data-location="browser" onclick="switchTool('base64')">
                         <i class="fas fa-code"></i><span>Base64</span>
                     </a>
-                    <a class="nav-item" data-tool="json-format" onclick="switchTool('json-format')">
+                    <a class="nav-item" data-tool="json-format" data-location="browser" onclick="switchTool('json-format')">
                         <i class="fas fa-file-code"></i><span>JSON Formatter</span>
                     </a>
-                    <a class="nav-item" data-tool="color-convert" onclick="switchTool('color-convert')">
+                    <a class="nav-item" data-tool="color-convert" data-location="browser" onclick="switchTool('color-convert')">
                         <i class="fas fa-palette"></i><span>Color Converter</span>
                     </a>
-                    <a class="nav-item" data-tool="markdown-preview" onclick="switchTool('markdown-preview')">
+                    <a class="nav-item" data-tool="markdown-preview" data-location="browser" onclick="switchTool('markdown-preview')">
                         <i class="fab fa-markdown"></i><span>Markdown Preview</span>
                     </a>
                 </div>
