feat: add privacy redaction tool, state management, and various utility functions
- Implemented a privacy redaction tool with image and video support, allowing users to redact content using box or blur modes.
- Created a state management module to handle application state, including current tool, media info, and download settings.
- Developed utility functions for formatting bytes, escaping HTML, and showing toast notifications.
- Introduced frontend-only tools for QR code generation, Base64 encoding/decoding, JSON formatting, color conversion, and Markdown preview.
- Added WASM support for client-side processing of audio and video files using FFmpeg.
- Integrated waveform visualization for audio and video tools using WaveSurfer.
- Enhanced UI components for tool selection, sidebar navigation, and tool options.

--- a/public/index.html
+++ b/public/index.html
@@ -1425,7 +1425,24 @@
         </div>
     </div>
 
-    <script src="app.js"></script>
+    <!-- Core (must be first) -->
+    <script src="js/state.js"></script>
+    <script src="js/utils.js"></script>
+    <!-- UI & navigation -->
+    <script src="js/ui.js"></script>
+    <!-- Tool modules -->
+    <script src="js/waveform.js"></script>
+    <script src="js/redact.js"></script>
+    <script src="js/crop.js"></script>
+    <script src="js/wasm.js"></script>
+    <script src="js/file-tools.js"></script>
+    <script src="js/batch.js"></script>
+    <script src="js/tools-misc.js"></script>
+    <!-- Downloader & health -->
+    <script src="js/downloader.js"></script>
+    <script src="js/health.js"></script>
+    <!-- PWA, particles, init (must be last) -->
+    <script src="js/pwa.js"></script>
     <script>
     if ('serviceWorker' in navigator) {
         navigator.serviceWorker.register('/sw.js').catch(() => {});
